force-app/main/default/objects/Opportunity/fields/Primary_Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Win_Reason__c</fullName>
    <description>Why did we win the Sale, what was the strongest deciding factor</description>
    <label>Primary Win Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Win__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Not satisfied w/ current service provider</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>RFP Selection</fullName>
            </value>
            <value>
                <fullName>School Recommendation</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>