force-app/main/default/objects/Opportunity/fields/Priority_High_Enrollment_School__c.field-meta.xml
<CustomField>
    <fullName>Priority_High_Enrollment_School__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this box if this is a top ten enrollment school.</description>
    <inlineHelpText>Please check this box if this is a top ten enrollment school.</inlineHelpText>
    <label>Priority High Enrollment School</label>
    <type>Checkbox</type>
</CustomField>