force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>If the primary loss reason is product please select which products were the reason for the loss.</description>
    <inlineHelpText>If the primary loss reason is product please select which products were the reason for the loss.</inlineHelpText>
    <label>Product-Loss</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Primary_Loss_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Debt Management</fullName>
            </value>
            <value>
                <fullName>Engagement/Activation Support</fullName>
            </value>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SALT Membership</fullName>
            </value>
            <value>
                <fullName>Staff Trainings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>