force-app/main/default/objects/Opportunity/fields/Product_Win__c.field-meta.xml
<CustomField>
    <fullName>Product_Win__c</fullName>
    <description>If the primary win reason is product please select which products were the reason for the win.</description>
    <inlineHelpText>If the primary win reason is product please select which products were the reason for the win.</inlineHelpText>
    <label>Product-Win</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Primary_Win_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Financial Literacy</fullName>
            </value>
            <value>
                <fullName>Debt Management</fullName>
            </value>
            <value>
                <fullName>SALT Membership</fullName>
            </value>
            <value>
                <fullName>Staff Trainings</fullName>
            </value>
            <value>
                <fullName>Engagement/Activation Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>