force-app/main/default/objects/Opportunity/fields/Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_Services__c</fullName>
    <label>Deprecated Products &amp; Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Education/My Money 101</fullName>
            </value>
            <value>
                <fullName>Education Debt Management</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Train-the-trainer</fullName>
            </value>
            <value>
                <fullName>In-person Student Training</fullName>
            </value>
            <value>
                <fullName>Webinar Student Training</fullName>
            </value>
            <value>
                <fullName>In-person Staff Training</fullName>
            </value>
            <value>
                <fullName>Webinar Staff Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>