force-app/main/default/objects/Opportunity/fields/Proposal_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Approval_Date__c</fullName>
    <label>Deprecated Proposal Approval Date</label>
    <type>Date</type>
</CustomField>