force-app/main/default/objects/Opportunity/fields/Proposal_Circulated_to_Sr_Staff__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Circulated_to_Sr_Staff__c</fullName>
    <label>Proposal Circulated to Sr. Staff</label>
    <type>Date</type>
</CustomField>