force-app/main/default/objects/Opportunity/fields/Proposal_Delivered_to_BD__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Delivered_to_BD__c</fullName>
    <label>Deprecated Proposal Delivered to BD</label>
    <type>Date</type>
</CustomField>