force-app/main/default/objects/Opportunity/fields/Proposal_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Draft_Date__c</fullName>
    <label>Deprecated Proposal Draft Date</label>
    <type>Date</type>
</CustomField>