force-app/main/default/objects/Opportunity/fields/Proposal_Returned_from_BD__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Returned_from_BD__c</fullName>
    <label>Proposal Decision Returned from BD</label>
    <type>Date</type>
</CustomField>