force-app/main/default/objects/Opportunity/fields/Proprietary__c.field-meta.xml
<CustomField>
    <fullName>Proprietary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proprietary</label>
    <type>Checkbox</type>
</CustomField>