force-app/main/default/objects/Opportunity/fields/Ready_to_Create_Contract__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Create_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Create Contract</label>
    <type>Checkbox</type>
</CustomField>