force-app/main/default/objects/Opportunity/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <label>Referred by</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>