force-app/main/default/objects/Opportunity/fields/Renewal_Opp__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a Renewal Opportunity.</inlineHelpText>
    <label>Renewal Opp?</label>
    <type>Checkbox</type>
</CustomField>