force-app/main/default/objects/Opportunity/fields/Rollover__c.field-meta.xml
<CustomField>
    <fullName>Rollover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollover</label>
    <type>Checkbox</type>
</CustomField>