force-app/main/default/objects/Opportunity/fields/Secondary_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Loss_Reason__c</fullName>
    <label>Deprecated_Secondary Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget Cycle/Lack of Funds</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Currently under contract</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>In house solution</fullName>
            </value>
            <value>
                <fullName>Interested, but not ready yet</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>RFP Selection</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>