force-app/main/default/objects/Opportunity/fields/Sponsorship_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Meeting__c</fullName>
    <label>Sponsorship Meeting</label>
    <type>Date</type>
</CustomField>