force-app/main/default/objects/Opportunity/fields/StageName_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>StageName_Changed_Date__c</fullName>
    <label>StageName Changed Date</label>
    <type>Date</type>
</CustomField>