force-app/main/default/objects/Opportunity/fields/Total_Eligible_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Eligible_Members__c</fullName>
    <formula>(Total_in_Enrollment__c  +  (Total_in_Repayment__c*3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Eligible Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>