force-app/main/default/objects/Opportunity/fields/Total_Est_Membership__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_Membership__c</fullName>
    <label>Total Estimated Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>