force-app/main/default/objects/Opportunity/fields/Total_in_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Total_in_Enrollment__c</fullName>
    <inlineHelpText>Complete this field if the number estimated to receive Education Debt Management is different from the Total # in Enrollment.</inlineHelpText>
    <label>Total # in Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>