force-app/main/default/objects/Opportunity/fields/Total_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoices__c</fullName>
    <formula>IF (ISPICKVAL(Invoice_Frequency__c,&quot;Monthly&quot;),VALUE(TEXT(Contract_Years__c))*12,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Semi-Annually&quot;),VALUE(TEXT(Contract_Years__c))*2,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Annually&quot;),VALUE(TEXT(Contract_Years__c))*1,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Quarterly&quot;),VALUE(TEXT(Contract_Years__c))*4,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;2 Year (Single Payment)&quot;),VALUE(TEXT(Contract_Years__c))*0+1,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;3 Year (Single Payment)&quot;),VALUE(TEXT(Contract_Years__c))*0+1,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;1 Time&quot;),VALUE(TEXT(Contract_Years__c))*0+1,0)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>