force-app/main/default/objects/Opportunity/fields/Trigger_Time_05__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_05__c</fullName>
    <formula>(NOW() -  0.038)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time 05</label>
    <type>DateTime</type>
</CustomField>