force-app/main/default/objects/Opportunity/fields/Type_of_School__c.field-meta.xml
<CustomField>
    <fullName>Type_of_School__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of School</label>
    <type>Text</type>
</CustomField>