force-app/main/default/objects/Opportunity/fields/Unique_Opp__c.field-meta.xml
<CustomField>
    <fullName>Unique_Opp__c</fullName>
    <label>Unique Opp</label>
    <length>150</length>
    <type>Text</type>
</CustomField>