force-app/main/default/objects/Opportunity/fields/When_is_campus_budget_set__c.field-meta.xml
<CustomField>
    <fullName>When_is_campus_budget_set__c</fullName>
    <description>If the loss reason = budget cycle/lack of funds is selected this field needs to be completed.</description>
    <inlineHelpText>If the loss reason = budget cycle/lack of funds is selected this field needs to be completed.</inlineHelpText>
    <label>When is campus budget set?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Loss_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>Apr</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sept</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>