force-app/main/default/objects/Opportunity/fields/Win__c.field-meta.xml
<CustomField>
    <fullName>Win__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the opportunity is won check this box then go onto fill out win reasons</description>
    <inlineHelpText>Don&#39;t forget to complete the primary and secondary win reasons.</inlineHelpText>
    <label>Win</label>
    <type>Checkbox</type>
</CustomField>