force-app/main/default/objects/Opportunity/fields/Win_Loss_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss_Analysis__c</fullName>
    <label>Win/Loss Analysis</label>
    <type>TextArea</type>
</CustomField>