force-app/main/default/objects/Opportunity/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <description>If the primary loss reason is competitor please choice who the winning competitor is.</description>
    <inlineHelpText>If the primary loss reason is competitor please choice who the winning competitor is.</inlineHelpText>
    <label>Winning Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Loss_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>AlaQuest International, Inc.</fullName>
            </value>
            <value>
                <fullName>Champion College Solutions</fullName>
            </value>
            <value>
                <fullName>CSLF (CT)</fullName>
            </value>
            <value>
                <fullName>Dave Ramsey</fullName>
            </value>
            <value>
                <fullName>Decision Partners, Inc.</fullName>
            </value>
            <value>
                <fullName>ECMC</fullName>
            </value>
            <value>
                <fullName>Ed America</fullName>
            </value>
            <value>
                <fullName>Ed Financial Services</fullName>
            </value>
            <value>
                <fullName>EdFund</fullName>
            </value>
            <value>
                <fullName>EverFi</fullName>
            </value>
            <value>
                <fullName>FAME</fullName>
            </value>
            <value>
                <fullName>FAME, Inc (FL)</fullName>
            </value>
            <value>
                <fullName>Financial Aid TV</fullName>
            </value>
            <value>
                <fullName>Financial Footprint</fullName>
            </value>
            <value>
                <fullName>General Revenue Corp/Sallie Mae</fullName>
            </value>
            <value>
                <fullName>GL Advisors</fullName>
            </value>
            <value>
                <fullName>Grad Ready</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Greenwood &amp; Hall</fullName>
            </value>
            <value>
                <fullName>Guarantec</fullName>
            </value>
            <value>
                <fullName>HigherOne</fullName>
            </value>
            <value>
                <fullName>Horizon Educational Resources, Inc.</fullName>
            </value>
            <value>
                <fullName>i3 Group, LLC</fullName>
            </value>
            <value>
                <fullName>iGrad</fullName>
            </value>
            <value>
                <fullName>Imagine America Foundation</fullName>
            </value>
            <value>
                <fullName>Inceptia (NSLP)</fullName>
            </value>
            <value>
                <fullName>KHEAA (Kentucky)</fullName>
            </value>
            <value>
                <fullName>Loanwise, LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>