force-app/main/default/objects/Opportunity/fields/X90_days_No_Activity_Reminder__c.field-meta.xml
<CustomField>
    <fullName>X90_days_No_Activity_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>90 days No Activity Reminder</label>
    <type>Checkbox</type>
</CustomField>