force-app/main/default/objects/Opportunity/recordTypes/BizDev.recordType-meta.xml
<RecordType>
    <fullName>BizDev</fullName>
    <active>false</active>
    <businessProcess>School Strategy</businessProcess>
    <description>School Client Opportunity</description>
    <label>Biz Dev</label>
</RecordType>