force-app/main/default/objects/Opportunity/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <businessProcess>New Contract Process</businessProcess>
    <description>New Business Opportunities</description>
    <label>Business Development</label>
</RecordType>