force-app/main/default/objects/Opportunity/recordTypes/Government_Biz_Dev.recordType-meta.xml
<RecordType>
    <fullName>Government_Biz_Dev</fullName>
    <active>true</active>
    <businessProcess>SWO Process</businessProcess>
    <description>New Gov&#39;t Business Opportunities (post FFELP)</description>
    <label>Government Biz Dev</label>
</RecordType>