force-app/main/default/objects/Opportunity/recordTypes/Grant_Sublease.recordType-meta.xml
<RecordType>
    <fullName>Grant_Sublease</fullName>
    <active>true</active>
    <businessProcess>New Contract Process</businessProcess>
    <description>Grant/Sublease Opportunity Record Type</description>
    <label>Grant/Sublease</label>
</RecordType>