force-app/main/default/objects/Opportunity/recordTypes/Guarantor.recordType-meta.xml
<RecordType>
    <fullName>Guarantor</fullName>
    <active>true</active>
    <businessProcess>SWO Process</businessProcess>
    <description>This record type is for Guarantor Opportunities</description>
    <label>Guarantor</label>
</RecordType>