force-app/main/default/objects/Opportunity/recordTypes/LenderOpportunity.recordType-meta.xml
<RecordType>
    <fullName>LenderOpportunity</fullName>
    <active>false</active>
    <businessProcess>Lender Strategy</businessProcess>
    <description>Lender Opportunity</description>
    <label>Lender Opportunity</label>
</RecordType>