force-app/main/default/objects/Opportunity/recordTypes/Membership_BD.recordType-meta.xml
<RecordType>
    <fullName>Membership_BD</fullName>
    <active>false</active>
    <businessProcess>New Contract Process</businessProcess>
    <label>Membership BD</label>
</RecordType>