force-app/main/default/objects/Opportunity/recordTypes/Renewal_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Opportunity</fullName>
    <active>false</active>
    <businessProcess>Renewal Contract Process</businessProcess>
    <description>Contract Renewal Opportunity</description>
    <label>Renewal Opportunity</label>
</RecordType>