force-app/main/default/objects/Opportunity/recordTypes/Sponsorship_BD.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_BD</fullName>
    <active>false</active>
    <businessProcess>New Contract Process</businessProcess>
    <label>Sponsorship BD</label>
</RecordType>