force-app/main/default/objects/Opportunity/recordTypes/Strategic_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Partnership</fullName>
    <active>true</active>
    <businessProcess>SWO Process</businessProcess>
    <label>Strategic Partnership</label>
</RecordType>