force-app/main/default/objects/Opportunity/validationRules/Check_Loss_if_Stage_is_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Loss_if_Stage_is_Closed_Lost</fullName>
    <active>true</active>
    <description>Check Loss field if Stage = Closed - Lost</description>
    <errorConditionFormula>RecordTypeId = &#39;0126000000010rU&#39; &amp;&amp; ISPICKVAL( StageName , &quot;Closed - Lost&quot;) &amp;&amp;  Loss__c  = False</errorConditionFormula>
    <errorDisplayField>Loss__c</errorDisplayField>
    <errorMessage>Update Loss field if opportunity is Closed - Lost</errorMessage>
</ValidationRule>