force-app/main/default/objects/Opportunity/validationRules/Contract_Status_Reqd_Stage_is_Contrac.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Status_Reqd_Stage_is_Contrac</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(StageName, &quot;Contract&quot;),OR(ISBLANK(TEXT(Contract_Status__c))))</errorConditionFormula>
    <errorDisplayField>Contract_Status__c</errorDisplayField>
    <errorMessage>You must set this field to Contract Requested in order to proceed.</errorMessage>
</ValidationRule>