force-app/main/default/objects/Opportunity/validationRules/Contract_Years_Reqd_Stage_is_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Years_Reqd_Stage_is_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(StageName, &quot;Contract&quot;),OR(ISBLANK(TEXT(Contract_Years__c))))</errorConditionFormula>
    <errorDisplayField>Contract_Years__c</errorDisplayField>
    <errorMessage>Contract Years must be a number between 1-5</errorMessage>
</ValidationRule>