force-app/main/default/objects/Opportunity/validationRules/Do_not_allow_to_rollover_renewal_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_to_rollover_renewal_opp</fullName>
    <active>true</active>
    <errorConditionFormula>Renewal_Opp__c = true &amp;&amp; Rollover__c = true &amp;&amp; isChanged(Rollover__c)</errorConditionFormula>
    <errorMessage>Renewal opportunities cannot automatically rollover to the next year</errorMessage>
</ValidationRule>