force-app/main/default/objects/Opportunity/validationRules/Invoice_Freq_Reqd_Stage_is_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Freq_Reqd_Stage_is_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(StageName, &quot;Contract&quot;),OR(ISBLANK(TEXT(Invoice_Frequency__c))))</errorConditionFormula>
    <errorDisplayField>Invoice_Frequency__c</errorDisplayField>
    <errorMessage>Please select the appropriate Invoice Frequency for this Contract</errorMessage>
</ValidationRule>