force-app/main/default/objects/Opportunity/validationRules/PrimaryLoss_to_Competitor_Complete_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryLoss_to_Competitor_Complete_Field</fullName>
    <active>false</active>
    <description>The user must report the winning competitor when the Primary Loss Reason = Competitor.</description>
    <errorConditionFormula>AND (ISPICKVAL (Primary_Loss_Reason__c, &quot;Competitor&quot;),
   ISPICKVAL (Winning_Competitor__c, &quot;&quot; ))</errorConditionFormula>
    <errorDisplayField>Winning_Competitor__c</errorDisplayField>
    <errorMessage>When the Primary Loss Reason is because of a competitor, you must provide the winning competitor&#39;s name.</errorMessage>
</ValidationRule>