force-app/main/default/objects/Opportunity/validationRules/Products_are_required_for_Proposal_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Products_are_required_for_Proposal_Opp</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( StageName ) = &#39;Proposal&#39; &amp;&amp; 
RecordTypeId = &#39;0126000000010rU&#39; &amp;&amp; 
Opportunity_Product_Count__c &lt;1</errorConditionFormula>
    <errorMessage>At least one Product must be supplied if Opportunity Stage = &#39;Proposal&#39;</errorMessage>
</ValidationRule>